# CodSoft---CPP-Programming-Internship

./: README.md  Task1_Number_Guessig.cpp  Task1_Number_Guessing.cpp  Task2_Simple_Calculator  Task2_Simple_Calculator.cpp  Task3_Tic-Tac-Toe.cpp  Task4_To_Do_List.cpp
Task_5-Image_Processing/: CMakeCache.txt  CMakeLists.txt  Makefile  Task_5-Image_Processing  cmake_install.cmake  main.cpp
